Fixed link font-size on smaller platforms

--- a/css/style.css
+++ b/css/style.css
@@ -40,26 +40,27 @@
     color: black;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 950px) {
     .navbar {
         text-align: center;
         display: block;
     }
     .navbar img {
-        margin-top: 15px;
-        width: 150px;
+        margin-top: 0px;
+        width: 250px;
     }
     .navbar a {
-        font-size: 15px;
+        padding: 0;
+        font-size: 25px;
     }
 }
 
 @media screen and (max-width: 500px) {
     .navbar img {
         margin-top: 0px;
-        width: 100px;
+        width: 150px;
     }
     .navbar a {
-        font-size: 10px;
+        font-size: 15px;
     }
 }
